IF (NOT ENABLE_MULTICAMERACALIBRATION)
	SET(ENABLE_MULTICAMERACALIBRATION 0 CACHE BOOL "Enable the camera laser pose calibration module (using OpenCV)")
ENDIF()

IF (ENABLE_MULTICAMERACALIBRATION)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_MULTICAMERACALIBRATION=1 PARENT_SCOPE)

	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(MULTICAMERACALIBRATION_INCDIRS ${OPENCV3_INCLUDE_DIRS})
	SET(MULTICAMERACALIBRATION_LIBDIRS ${OPENCV3_LIBRARY_DIRS})

	SET(MULTICAMERACALIBRATION_C_LIBS "")
	SET(MULTICAMERACALIBRATION_CXX_LIBS ${OPENCV3_LIBRARIES})

	SET(MULTICAMERACALIBRATION_C_SRC_FILES  modules/multicameracalibration/cameracalibration.c)
	SET(MULTICAMERACALIBRATION_CXX_SRC_FILES  modules/multicameracalibration/calibration.cpp  modules/multicameracalibration/calibration_wrapper.cpp)

	# Propagate to parent scope.
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${MULTICAMERACALIBRATION_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${MULTICAMERACALIBRATION_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${MULTICAMERACALIBRATION_C_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${MULTICAMERACALIBRATION_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} ${MULTICAMERACALIBRATION_CXX_LIBS} PARENT_SCOPE)
	SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${MULTICAMERACALIBRATION_CXX_SRC_FILES} PARENT_SCOPE)
ENDIF()
