IF (NOT ENABLE_NULLHOPINTERFACE)
	SET(ENABLE_NULLHOPINTERFACE 0 CACHE BOOL "Enable Caffe deep-learning framework interface module")
	IF (NOT FPGA_MODE)
		SET(FPGA_MODE 1 CACHE BOOL "Set NullHop Interface to work only with the Zynq FPGA")
	ENDIF()
ENDIF()

IF (ENABLE_NULLHOPINTERFACE)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_NULLHOPINTERFACE=1)
	IF (FPGA_MODE)
		SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DFPGA_MODE=1)
	ENDIF()


	SET(NULLHOPIF_INCDIRS "")
	SET(NULLHOPIF_LIBDIRS "")
	SET(NULLHOPIF_C_LIBS "")
	SET(NULLHOPIF_C_SRC_FILES "")
	SET(NULLHOPIF_CXX_LIBS "")
	SET(NULLHOPIF_CXX_SRC_FILES "")

        FIND_PACKAGE(Curses)
        IF (Curses_FOUND)
                MESSAGE(STATUS "Curses FOUND - ${CURSES_LIBRARIES} ${CURSES_INCLUDE_DIRS} ${CURSES_LIBRARY_DIRS} ${CURSES_LIBRARIES}")
                SET(NULLHOPIF_CXX_INCDIRS ${NULLHOPIF_INCDIRS} ${CURSES_INCLUDE_DIRS})
                SET(NULLHOPIF_CXX_LIBDIRS ${NULLHOPIF_LIBDIRS} ${CURSES_LIBRARY_DIRS})
                SET(NULLHOPIF_CXX_LIBS ${NULLHOPIF_CXX_LIBS} ${CURSES_LIBRARIES})
        ENDIF()

	SET(NULLHOPIF_C_LIBS ${NULLHOPIF_C_LIBS} "")
	SET(NULLHOPIF_C_SRC_FILES ${NULLHOPIF_C_SRC_FILES} modules/nullhopinterface/nullhopinterface.c)

	SET(NULLHOPIF_CXX_LIBS ${NULLHOPIF_CXX_LIBS} ${NULLHOPIF_C_LIBS})
	SET(NULLHOPIF_CXX_SRC_FILES ${NULLHOPIF_CXX_SRC_FILES} modules/nullhopinterface/classify.cpp modules/nullhopinterface/wrapper.cpp)

	# Propagate to parent scope.
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${NULLHOPIF_CXX_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${NULLHOPIF_CXX_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${NULLHOPIF_C_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${NULLHOPIF_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} ${NULLHOPIF_CXX_LIBS} PARENT_SCOPE)
	SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${NULLHOPIF_CXX_SRC_FILES} PARENT_SCOPE)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} PARENT_SCOPE)
ENDIF()
